crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_sessions_picker_after_moving_the_selection.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
                                                                                
  ┌ sessions ────────────────────────────────────────────────────────────────┐  
  │  porting the session store                         just now  12.4k tokens│  
  │> ses_middle                                          5m ago   1.2k tokens│  
  │  a first look at the tool registry                   3h ago     42 tokens│  
  │                                                                          │  
  │[j/k] [up/down] move   [Enter] resume   [Esc] close                       │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  └──────────────────────────────────────────────────────────────────────────┘  
                                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready
