crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_sessions_picker_open.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
                                                                                
  ┌ sessions ────────────────────────────────────────────────────────────────┐  
  │> porting the session store                         just now  12.4k tokens│  
  │  0198f2c4-a1b0-7000-8000-000000000012                5m ago   1.2k tokens│  
  │  a first look at the tool registry                   3h ago     42 tokens│  
  │                                                                          │  
  │[j/k] [up/down] move   [Enter] resume   [Esc] close                       │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  └──────────────────────────────────────────────────────────────────────────┘  
                                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready
