crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_shell_mode.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
> show me every color you have                                                  
                                                                                
● One edit applied, one command refused.                                        
● Edit(filePath: "theme.rs")                                                    
  ⎿ theme.rs                                                                    
    @@ -1,2 +1,2 @@                                                             
    -let theme = Theme::default();                                              
    +let theme = themes.theme();                                                
    context                                                                     
● Bash(command: "rm -rf /")                                                     
  ⎿ [error] refused: destructive command                                        
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ Shell ───────────────────────────────────────────────────────────────────────┐
│cargo nextest run --workspace                                                 │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready                              Enter run · Esc exit shell mode · Ctrl-C quit
