crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_skill_menu.snap
---
source: crates/ganja-tui/src/app.rs
assertion_line: 9579
expression: screen(&terminal)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ skills ──────────────────────────────────────────────────────────────────────┐
│> porting  (user) How to port a module.                                       │
│  tdd      (user) Red, green.                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
┌ message ─────────────────────────────────────────────────────────────────────┐
│use $                                                                         │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready
