crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_task_completed.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
ganja                                                                           
✓ Explore Task — find every caller of resolve                                   
↳ 9 toolcalls · 23.5s                                                           
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
⠋ streaming            Enter send · Alt+Enter newline · Esc cancel · Ctrl-C quit
