crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_task_running.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
● Task(agent: "explore", description: "find every caller of resolve")           
  ⎿ grep resolve                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
✻ Thinking… (0s)                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
tool: task
