crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_team_action_menu.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ┌ team ────────────────────────────────────────────────────────────────────┐  
  │w1                                                                        │  
  │> Message…                                                                │  
  │  Shutdown                                                                │  
  │                                                                          │  
  │[j/k] [up/down] move   [Enter] run   [Esc] close                          │  
  └──────────────────────────────────────────────────────────────────────────┘  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready
