crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_team_dialog_open.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
                                                                                
  ┌ team ────────────────────────────────────────────────────────────────────┐  
  │> team-lead  in-process  lead                                             │  
  │  w1         in-process                                                   │  
  │  ⎿ read(src/lib.rs)                                                      │  
  │  ⎿ grep(fn spawn)                                                        │  
  │  w2         claude                                                       │  
  │                                                                          │  
  │  Spawn teammate…                                                         │  
  │                                                                          │  
  │[j/k] [up/down] move   [Enter] choose   [Esc] close                       │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  └──────────────────────────────────────────────────────────────────────────┘  
                                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready
